documentation update in framework, docset and readme

--- a/AcrolinxPluginSDKForMac/com.acrolinx.AcrolinxPlugin-Framework.docset/Contents/Resources/Documents/Protocols/AcrolinxPluginProtocol.html
+++ b/AcrolinxPluginSDKForMac/com.acrolinx.AcrolinxPlugin-Framework.docset/Contents/Resources/Documents/Protocols/AcrolinxPluginProtocol.html
@@ -199,7 +199,7 @@ Default implementation returns the bundle name.
 			
 			
 			<div class="method-subsection brief-description">
-				<pre><code>Returns the path of the fronmost file.
+				<pre><code>Returns the path of the frontmost file.
 </code></pre>
 			</div>
 			
@@ -278,7 +278,7 @@ Default implementation returns the bundle name.
 			
 			<div class="method-subsection return">
 				<h4 class="method-subtitle parameter-title">Return Value</h4>
-				<p>Apath the file was actually written to, returns nil on error.</p>
+				<p>A path the file was actually written to, returns nil on error.</p>
 			</div>
 			
 
@@ -287,8 +287,8 @@ Default implementation returns the bundle name.
 			
 			<div class="method-subsection discussion-section">
 				<h4 class="method-subtitle">Discussion</h4>
-				<p>It is possible that a plugin saves the file to a different location (or format) and.
-For this case the plugin should return the new file path so that the baseclimb can watchDog the correct file.</p>
+				<p>It is possible that a plugin saves the file to a different location (or format).
+For this case the plugin should return the new file path so that the application can watchDog the correct file.</p>
 			</div>
 			
 
@@ -364,7 +364,7 @@ For this case the plugin should return the new file path so that the baseclimb c
 			
 			
 			<div class="method-subsection brief-description">
-				<pre><code>Returns a set of suiffixes this plugin is able to handle.
+				<pre><code>Returns a set of suffixes this plugin is able to handle.
 </code></pre>
 			</div>
 			
@@ -505,7 +505,7 @@ For this case the plugin should return the new file path so that the baseclimb c
 			
 			
 			<div class="method-subsection brief-description">
-				<pre><code>Used to determine the plugin compatibility. An Plugin can check for dependencies and act accordingly.
+				<pre><code>Used to determine the plugin compatibility. A Plugin can check for dependencies and act accordingly.
 </code></pre>
 			</div>
 			
@@ -568,7 +568,7 @@ For this case the plugin should return the new file path so that the baseclimb c
 				
 					<tr>
 						<th scope="row" class="argument-name"><code>sidebarURL</code></th>
-						<td><p>An URL of sidebar HTML.</p></td>
+						<td><p>A URL of sidebar HTML.</p></td>
 					</tr>
 				
 				</table>
