--- a/AcrolinxPluginSDKForMac/com.acrolinx.AcrolinxPlugin-Framework.docset/Contents/Resources/Documents/Protocols/AcrolinxSidebarDelegate.html
+++ b/AcrolinxPluginSDKForMac/com.acrolinx.AcrolinxPlugin-Framework.docset/Contents/Resources/Documents/Protocols/AcrolinxSidebarDelegate.html
@@ -295,7 +295,7 @@ It is also needed to get the documents contents for checking and downloading att
 			
 			
 			<div class="method-subsection brief-description">
-				<pre><code>Called when the sidebar replaces an issues.
+				<pre><code>Called when the sidebar replaces an issue.
 </code></pre>
 			</div>
 			
